--- a/EuropeanMortalityAnalyzer/EuropeanMortalityAnalyzer.csproj
+++ b/EuropeanMortalityAnalyzer/EuropeanMortalityAnalyzer.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="EPPlus" Version="6.2.8" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.118" />
   </ItemGroup>
 
