--- a/EuropeanMortalityAnalyzer/EuropeanMortalityAnalyzer.csproj
+++ b/EuropeanMortalityAnalyzer/EuropeanMortalityAnalyzer.csproj
@@ -2,15 +2,21 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <TargetFrameworks>net472;net6.0</TargetFrameworks>
+    <ImplicitUsings>false</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <LangVersion>10.0</LangVersion>
+    <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="EPPlus" Version="6.2.8" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.118" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="System.Data.DataSetExtensions" />
   </ItemGroup>
 
 </Project>
